# syncfolder

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-windows.yml
_bmad-output/implementation-artifacts/: 1-1-khoi-tao-ung-dung-tu-starter-template-va-nen-tang-luu-tru-cuc-bo.md  1-2-tao-ho-so-dong-bo-moi-bang-chon-thu-muc-nguon-va-dich.md  1-3-luu-va-khoi-phuc-ho-so-dong-bo-da-cau-hinh.md  1-4-chinh-sua-ho-so-va-cau-hinh-lich-dong-bo.md  2-1-khoi-chay-dong-bo-thu-cong-cho-mot-ho-so-da-luu.md  sprint-status.yaml  (+16 more)
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_sync_jobs.sql  0003_sync_events.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: logs.rs  mod.rs  profiles.rs  status.rs  sync.rs
src-tauri/src/errors/: app_error.rs  error_codes.rs  mod.rs
src-tauri/src/events/: mod.rs  sync_events.rs
src-tauri/src/models/: job.rs  mod.rs  profile.rs  sync_event.rs
src-tauri/src/repositories/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/logging/: job_logger.rs  mod.rs
src-tauri/src/services/path_guard/: allowlist.rs  mod.rs
src-tauri/src/services/persistence/: sqlite.rs
src-tauri/src/services/scheduler/: job_scheduler.rs  mod.rs
src-tauri/src/services/sync_engine/: comparer.rs  deletion_policy.rs  executor.rs  mod.rs  planner.rs  scanner.rs
src-tauri/src/utils/: datetime.rs  mod.rs  paths.rs
(+46 files in other folders)
