[package]
name = "syncfolder"
version = "0.1.0"
description = "Desktop sync utility for Windows 11"
authors = ["syncfolder"]
edition = "2021"

[lib]
name = "syncfolder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
